200 OK http://www.parliament.gh/parliamentarians/161

--- a/www.parliament.gh/90109cda03add059e4a08ee86bace5d8c1269dc7.yml
+++ b/www.parliament.gh/90109cda03add059e4a08ee86bace5d8c1269dc7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:02:09 GMT
+    - Thu, 17 Nov 2016 17:36:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222233a5ab65929b2c7b0979facfc1960e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380529%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D31eae3ab365943b717786ec1e6516082;
-      expires=Thu, 17-Nov-2016 13:02:09 GMT; path=/
-    - csrf_xmen=a732aa48575687036278096c37d6290d; expires=Thu, 17-Nov-2016 13:02:09
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2248a3d5dfa2a10d38432d614cf26ea091%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404177%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dec095661dd6958e7892836c306f46491;
+      expires=Thu, 17-Nov-2016 19:36:17 GMT; path=/
+    - csrf_xmen=dff3c159c3d6cc89349a37fcfb0ec66e; expires=Thu, 17-Nov-2016 19:36:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16671'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:02:09 GMT
+recorded_at: Thu, 17 Nov 2016 17:36:17 GMT
