200 OK http://www.parliament.gh/parliamentarians/163

--- a/www.parliament.gh/16a11c80d28a9d50b4baba52bf0314cffb2765b3.yml
+++ b/www.parliament.gh/16a11c80d28a9d50b4baba52bf0314cffb2765b3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:04:58 GMT
+    - Thu, 17 Nov 2016 17:36:52 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e8a36aaf3f887814e94eae9c6a5d072a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380698%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd113ab9fcd573148fe1fa7e12e1729db;
-      expires=Thu, 17-Nov-2016 13:04:58 GMT; path=/
-    - csrf_xmen=908a2b633190e735d84a3be7811c25ed; expires=Thu, 17-Nov-2016 13:04:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fe3cf891c2f3dac82c39e7f5e04d4b18%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404212%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1662807198dab069a39fc5e6aa2de66f;
+      expires=Thu, 17-Nov-2016 19:36:52 GMT; path=/
+    - csrf_xmen=dff7c6e6575b8e641718eaf55806c7a6; expires=Thu, 17-Nov-2016 19:36:52
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16883'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:04:58 GMT
+recorded_at: Thu, 17 Nov 2016 17:36:52 GMT
