200 OK http://www.parliament.gh/parliamentarians/162

--- a/www.parliament.gh/a0f31fe79f3514a0f7b34e312e0aaf3725e6bbc1.yml
+++ b/www.parliament.gh/a0f31fe79f3514a0f7b34e312e0aaf3725e6bbc1.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:05:14 GMT
+    - Thu, 17 Nov 2016 17:37:14 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223099a31271616483ba42175126cfb51d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380714%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D82171c462139f53f2e7e30991e749210;
-      expires=Thu, 17-Nov-2016 13:05:14 GMT; path=/
-    - csrf_xmen=850cdaf4b93762359d49c5b4ad9bb147; expires=Thu, 17-Nov-2016 13:05:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224ea49cbe5ad40fb8a89221b3e9ba8528%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404234%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D764713fbf679b55d1ffa4181aa1293a2;
+      expires=Thu, 17-Nov-2016 19:37:14 GMT; path=/
+    - csrf_xmen=94df304a47bebc8d62d7aeee0921ad4e; expires=Thu, 17-Nov-2016 19:37:14
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16970'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:05:14 GMT
+recorded_at: Thu, 17 Nov 2016 17:37:15 GMT
