--- a/www.parliament.gh/207fd0a24799c9d63b8264b26e67078a458098af.yml
+++ b/www.parliament.gh/207fd0a24799c9d63b8264b26e67078a458098af.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:05:32 GMT
+    - Thu, 17 Nov 2016 17:37:43 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223b3276a28b7c31ecfdc42e7e8423be19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380732%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D759802372d38f8dcc191001021a26751;
-      expires=Thu, 17-Nov-2016 13:05:32 GMT; path=/
-    - csrf_xmen=af397156c0bcaebcfe05e579fe29ba78; expires=Thu, 17-Nov-2016 13:05:32
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b159d40067c71b9b45462896d97e2e19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404263%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6f4b477f8733e183db4616b4a730235f;
+      expires=Thu, 17-Nov-2016 19:37:43 GMT; path=/
+    - csrf_xmen=7c0c36b67320a5d58c8f50a03ed23b3c; expires=Thu, 17-Nov-2016 19:37:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16484'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:05:32 GMT
+recorded_at: Thu, 17 Nov 2016 17:37:43 GMT
