--- a/www.parliament.gh/669ffaeb8aabce4e62e2e8c3c2b70e2925f6b77d.yml
+++ b/www.parliament.gh/669ffaeb8aabce4e62e2e8c3c2b70e2925f6b77d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:05:49 GMT
+    - Thu, 17 Nov 2016 17:38:21 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228183f013f5cce9a12051dd1b940f7c67%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380749%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D989071a91845776d5e347510f4464f57;
-      expires=Thu, 17-Nov-2016 13:05:49 GMT; path=/
-    - csrf_xmen=60f7762eb95c9f259b95de1948e7c0d8; expires=Thu, 17-Nov-2016 13:05:49
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22de4e346ca0047ff9cda67376753dc8cf%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404302%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8c7ac6f0d95e6607aa5690892de8fa8d;
+      expires=Thu, 17-Nov-2016 19:38:22 GMT; path=/
+    - csrf_xmen=627ad837af52f4a50da3d1b952b3617f; expires=Thu, 17-Nov-2016 19:38:22
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16707'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:05:50 GMT
+recorded_at: Thu, 17 Nov 2016 17:38:22 GMT
