--- a/www.parliament.gh/c048a6672f128a6c36ba70703885c4273c9be259.yml
+++ b/www.parliament.gh/c048a6672f128a6c36ba70703885c4273c9be259.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:06:05 GMT
+    - Thu, 17 Nov 2016 17:38:55 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2264048f587993011b663f65e6cf54e33a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380766%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D632df11174b432b05c9f33fe8dfa4e10;
-      expires=Thu, 17-Nov-2016 13:06:06 GMT; path=/
-    - csrf_xmen=63e44b70f407d44f65277927ab7ec43f; expires=Thu, 17-Nov-2016 13:06:06
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2292aca75d82952e9c3b382bcdde38b02b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404335%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D66c89b22509b927b118adea3613c4843;
+      expires=Thu, 17-Nov-2016 19:38:55 GMT; path=/
+    - csrf_xmen=fea16945d5a29fb0a48a11798f186b0d; expires=Thu, 17-Nov-2016 19:38:55
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16879'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:06:06 GMT
+recorded_at: Thu, 17 Nov 2016 17:38:55 GMT
