--- a/www.parliament.gh/f04d0815278e351e6faf18b760ebea8355d1b422.yml
+++ b/www.parliament.gh/f04d0815278e351e6faf18b760ebea8355d1b422.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:06:22 GMT
+    - Thu, 17 Nov 2016 17:39:32 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2208fd9e2504b9955eaf6509df5dfa30a2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380782%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7ef26434be405e2d0153b53db5de1791;
-      expires=Thu, 17-Nov-2016 13:06:22 GMT; path=/
-    - csrf_xmen=6e456c7462844d523e1b1e9dbcbd4767; expires=Thu, 17-Nov-2016 13:06:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22959c7f2fb764ea6b2ff0e82dac056334%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404372%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df7fd1fb86429175068e11e9500e69dfa;
+      expires=Thu, 17-Nov-2016 19:39:32 GMT; path=/
+    - csrf_xmen=779427a34463ea918660268a7f9c15e4; expires=Thu, 17-Nov-2016 19:39:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16439'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:06:22 GMT
+recorded_at: Thu, 17 Nov 2016 17:39:32 GMT
