--- a/www.parliament.gh/31fe4d1001c27b05a9861ea703443c9030186af9.yml
+++ b/www.parliament.gh/31fe4d1001c27b05a9861ea703443c9030186af9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:04:39 GMT
+    - Thu, 17 Nov 2016 17:40:09 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=886f91152b1bf559282dfe90fd4b1a7d; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ebedb9c8de147c8957a965888ca9a83e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380679%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D22f359b1d746ac9d64556b09bb1e0841;
-      expires=Thu, 17-Nov-2016 13:04:39 GMT; path=/
-    - csrf_xmen=fd158465c05663fcba655f782ab48fd5; expires=Thu, 17-Nov-2016 13:04:39
+    - PHPSESSID=8630ae550383ce44daa38c9e0987d310; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bd97f042ea95f548b6143729e7734cac%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404410%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D07d9b20233c17ebac504a51bde26a885;
+      expires=Thu, 17-Nov-2016 19:40:10 GMT; path=/
+    - csrf_xmen=ef8073df6d8a6f4591792c6176936338; expires=Thu, 17-Nov-2016 19:40:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78185'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:04:40 GMT
+recorded_at: Thu, 17 Nov 2016 17:40:10 GMT
