200 OK http://www.parliament.gh/parliamentarians/67

--- a/www.parliament.gh/80dd954bc12c4eb7ec318f96a16476b90749d89e.yml
+++ b/www.parliament.gh/80dd954bc12c4eb7ec318f96a16476b90749d89e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:06:43 GMT
+    - Thu, 17 Nov 2016 17:43:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e9908119bcf4942c71e142fc90cc267e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380803%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D13db7d7413c4e5e235c56b843854610e;
-      expires=Thu, 17-Nov-2016 13:06:43 GMT; path=/
-    - csrf_xmen=15189b5ca050789a54d05bce28bc0282; expires=Thu, 17-Nov-2016 13:06:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d6b40b12ad38ea9cf8780a37b5e5a801%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404637%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De7f6d40ee238572e753bda0958809c58;
+      expires=Thu, 17-Nov-2016 19:43:57 GMT; path=/
+    - csrf_xmen=3e85cce5eab8f0af514b798b3c7b1c26; expires=Thu, 17-Nov-2016 19:43:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16459'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:06:43 GMT
+recorded_at: Thu, 17 Nov 2016 17:43:57 GMT
