--- a/www.parliament.gh/120772207a9c414fd53a838cdb8a809d0daeb02e.yml
+++ b/www.parliament.gh/120772207a9c414fd53a838cdb8a809d0daeb02e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:07:08 GMT
+    - Thu, 17 Nov 2016 17:44:35 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22778cd896d4ef9d2571415cb956137a78%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380829%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dafe387476ac78d525ca01cdcf71fd93e;
-      expires=Thu, 17-Nov-2016 13:07:09 GMT; path=/
-    - csrf_xmen=c2da6bbd9f71eb9bcc69a3d7e5020009; expires=Thu, 17-Nov-2016 13:07:08
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22284f7994710e5292a8c1f47402d8cdde%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404676%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D632893c9e1c47c34c5bad8be1cfd8548;
+      expires=Thu, 17-Nov-2016 19:44:36 GMT; path=/
+    - csrf_xmen=674e799156746b2111220c13f8840d10; expires=Thu, 17-Nov-2016 19:44:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '16640'
     Content-Type:
     - text/html; charset=iso-8859-1
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:07:09 GMT
+recorded_at: Thu, 17 Nov 2016 17:44:36 GMT
