200 OK http://www.parliament.gh/parliamentarians/68

--- a/www.parliament.gh/6d68693c8e889c665e6c0f9108342aff4345c1c5.yml
+++ b/www.parliament.gh/6d68693c8e889c665e6c0f9108342aff4345c1c5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:07:35 GMT
+    - Thu, 17 Nov 2016 17:45:07 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2289e4815621ef757f4f0b748430a96e25%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380855%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da00c3318132f12cfd2d79ef68b1a92e5;
-      expires=Thu, 17-Nov-2016 13:07:35 GMT; path=/
-    - csrf_xmen=e2e85b5e49b8d9bfafddc0e2b1311832; expires=Thu, 17-Nov-2016 13:07:35
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225dc72c32f1c5fa359b176eae536999b0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404707%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0df7fcf1157cad6dd217f5c5a9721950;
+      expires=Thu, 17-Nov-2016 19:45:07 GMT; path=/
+    - csrf_xmen=ca56e2e343990fb8b3e4c96508cb0d7c; expires=Thu, 17-Nov-2016 19:45:07
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16784'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:07:36 GMT
+recorded_at: Thu, 17 Nov 2016 17:45:07 GMT
