--- a/www.parliament.gh/4d4a3db7e014107c24d3c863794f6729759c704a.yml
+++ b/www.parliament.gh/4d4a3db7e014107c24d3c863794f6729759c704a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:08:01 GMT
+    - Thu, 17 Nov 2016 17:45:31 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220de195c366f8e47daaec4b2db5ef9f98%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380881%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D253f17d076b1e10e4244784741d8143d;
-      expires=Thu, 17-Nov-2016 13:08:01 GMT; path=/
-    - csrf_xmen=86e787671901f63ee85e56e2174becf9; expires=Thu, 17-Nov-2016 13:08:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2238e1015845fe08a4904efe13f43d889d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404731%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7c6f8842495031382f5ac472c92d7970;
+      expires=Thu, 17-Nov-2016 19:45:31 GMT; path=/
+    - csrf_xmen=0c27f4ea1fe46a75578b669486204d19; expires=Thu, 17-Nov-2016 19:45:31
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16604'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:08:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:45:32 GMT
