--- a/www.parliament.gh/43ace44f1550daa414c9a6eaf226c183b4a00052.yml
+++ b/www.parliament.gh/43ace44f1550daa414c9a6eaf226c183b4a00052.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:08:17 GMT
+    - Thu, 17 Nov 2016 17:46:00 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220d7192ffc239d67fe8b53af894172ccd%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380897%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd8c99d23ee05e7b82622d377ac26c3d6;
-      expires=Thu, 17-Nov-2016 13:08:17 GMT; path=/
-    - csrf_xmen=93224637f107f2e0507afe6f705ca7ff; expires=Thu, 17-Nov-2016 13:08:17
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2269741f8712b5c54eb96396617c9d3858%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404760%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D252a4227c639d8d11ac96a38a1c66bd9;
+      expires=Thu, 17-Nov-2016 19:46:00 GMT; path=/
+    - csrf_xmen=5f33e2b2cf2b30805c4d7c78de3d9d5b; expires=Thu, 17-Nov-2016 19:46:00
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16298'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:08:17 GMT
+recorded_at: Thu, 17 Nov 2016 17:46:00 GMT
