200 OK http://www.parliament.gh/parliamentarians/335

--- a/www.parliament.gh/fb44d0f451494dc58611b2cdef6d913aa8d31db5.yml
+++ b/www.parliament.gh/fb44d0f451494dc58611b2cdef6d913aa8d31db5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:08:36 GMT
+    - Thu, 17 Nov 2016 17:46:19 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224b98ef7ec38fdff41ced5ad7c21c4f44%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380916%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De2a650a9622e6a805c5113e3355db7c9;
-      expires=Thu, 17-Nov-2016 13:08:36 GMT; path=/
-    - csrf_xmen=1a6ff1aa2a8ab070b752abbe73555dad; expires=Thu, 17-Nov-2016 13:08:36
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fbe74120efca416c1821a6b6c3e3f450%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404779%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De25871512ba44de8b30bac322f08d4b7;
+      expires=Thu, 17-Nov-2016 19:46:19 GMT; path=/
+    - csrf_xmen=56fed52c290f0236437bcbef25f73927; expires=Thu, 17-Nov-2016 19:46:19
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16529'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:08:36 GMT
+recorded_at: Thu, 17 Nov 2016 17:46:20 GMT
