200 OK http://www.parliament.gh/parliamentarians/182

--- a/www.parliament.gh/6b4b745b7aceac9db7ee38e60c2b08581b4340de.yml
+++ b/www.parliament.gh/6b4b745b7aceac9db7ee38e60c2b08581b4340de.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:09:01 GMT
+    - Thu, 17 Nov 2016 17:46:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227b88e2e46680fe05982c472d6729ed6a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380941%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Deaeb4fa7f9876b36a8310ce11ccebab2;
-      expires=Thu, 17-Nov-2016 13:09:01 GMT; path=/
-    - csrf_xmen=69f03d9fce4a6262a4240db2d70575bf; expires=Thu, 17-Nov-2016 13:09:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fa24a60266a054fd4b28d602a069ee7a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404800%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd26d69f3ae09fb292f8296f1031130ca;
+      expires=Thu, 17-Nov-2016 19:46:40 GMT; path=/
+    - csrf_xmen=6e65e2cfb0805d9f1a7f228e8521ede8; expires=Thu, 17-Nov-2016 19:46:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16660'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:09:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:46:40 GMT
