--- a/www.parliament.gh/376a4503ab4caa7f6afd472ee9cfdcbcdb59ba50.yml
+++ b/www.parliament.gh/376a4503ab4caa7f6afd472ee9cfdcbcdb59ba50.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:09:21 GMT
+    - Thu, 17 Nov 2016 17:47:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22863dd57c7aa0e957d60610a269f8126b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380962%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D02ec238de42ba696b1506a5c0360660c;
-      expires=Thu, 17-Nov-2016 13:09:22 GMT; path=/
-    - csrf_xmen=71f87f84f422676b154bab29ab3a6ce4; expires=Thu, 17-Nov-2016 13:09:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22444e8e764eb24910b6cf775c0b5cb185%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404836%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df785a380ac9a3ecf9fa63174d8eab8e9;
+      expires=Thu, 17-Nov-2016 19:47:16 GMT; path=/
+    - csrf_xmen=c15ad2b6f3811573ab65389d9f0916ea; expires=Thu, 17-Nov-2016 19:47:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16501'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:09:22 GMT
+recorded_at: Thu, 17 Nov 2016 17:47:16 GMT
