200 OK http://www.parliament.gh/parliamentarians/347

--- a/www.parliament.gh/8b2de5f2d9839c1b49ac9ffb7d2224d4c3688e14.yml
+++ b/www.parliament.gh/8b2de5f2d9839c1b49ac9ffb7d2224d4c3688e14.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:10:20 GMT
+    - Thu, 17 Nov 2016 17:48:34 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22141c4acdf0151f331c129f79f2e7068c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381020%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D59752c1c2886bc8a226fafa620cbede2;
-      expires=Thu, 17-Nov-2016 13:10:20 GMT; path=/
-    - csrf_xmen=6ef25b0011c8ee8a084b2a64cb7839d9; expires=Thu, 17-Nov-2016 13:10:20
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222f312aae39e2c171e8ebbdb56742581d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404914%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D661678210c2962bb502dd939eb36f18c;
+      expires=Thu, 17-Nov-2016 19:48:34 GMT; path=/
+    - csrf_xmen=d41497d39741c9a56284450796b711c5; expires=Thu, 17-Nov-2016 19:48:34
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16846'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:10:20 GMT
+recorded_at: Thu, 17 Nov 2016 17:48:34 GMT
