200 OK http://www.parliament.gh/parliamentarians/370

--- a/www.parliament.gh/c5fe3c1f4d86065f2d7f0e9b7d244565efc16810.yml
+++ b/www.parliament.gh/c5fe3c1f4d86065f2d7f0e9b7d244565efc16810.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:10:37 GMT
+    - Thu, 17 Nov 2016 17:48:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22146114e86286ae83c0749ee2ad729f6c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381037%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd61944a82132c15da47d3a65b3cffbb3;
-      expires=Thu, 17-Nov-2016 13:10:37 GMT; path=/
-    - csrf_xmen=e45db920360bd2c67db73e1c8c6886b2; expires=Thu, 17-Nov-2016 13:10:37
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fa87fbf14c23243f819f3e803bc73121%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404930%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4278dcc3a68f3c42f34cb09d72800112;
+      expires=Thu, 17-Nov-2016 19:48:50 GMT; path=/
+    - csrf_xmen=4db7767b5c8f9f08cc39e2190dc65eb3; expires=Thu, 17-Nov-2016 19:48:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17184'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:10:37 GMT
+recorded_at: Thu, 17 Nov 2016 17:48:51 GMT
