200 OK http://www.parliament.gh/parliamentarians/183

--- a/www.parliament.gh/db23f6cf18e884178328baaf8b69e547ac6b9147.yml
+++ b/www.parliament.gh/db23f6cf18e884178328baaf8b69e547ac6b9147.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:10:55 GMT
+    - Thu, 17 Nov 2016 17:49:13 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2264dada7944d5ffa92983619d2d84c312%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381055%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Defd40354854710a7cef531451df9a854;
-      expires=Thu, 17-Nov-2016 13:10:55 GMT; path=/
-    - csrf_xmen=e2310dd2430ce50b5ce12ab700dcd350; expires=Thu, 17-Nov-2016 13:10:55
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d0217dcaf5a8bdc55d84cb9d21312163%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404953%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5181931c97126e5bb03ff7c2b5104de9;
+      expires=Thu, 17-Nov-2016 19:49:13 GMT; path=/
+    - csrf_xmen=5008219d263696fce456ed62668cfef5; expires=Thu, 17-Nov-2016 19:49:13
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16548'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:10:55 GMT
+recorded_at: Thu, 17 Nov 2016 17:49:13 GMT
