200 OK http://www.parliament.gh/parliamentarians/79

--- a/www.parliament.gh/53830c10ac67a23db2041e465e00aedcf2994e9e.yml
+++ b/www.parliament.gh/53830c10ac67a23db2041e465e00aedcf2994e9e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:11:15 GMT
+    - Thu, 17 Nov 2016 17:49:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2282a7ff1aee2478f73371291c6218cd0e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381075%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0d404eb65e9ccf96c7b07af5101cabc5;
-      expires=Thu, 17-Nov-2016 13:11:15 GMT; path=/
-    - csrf_xmen=15a362030ad978955a16bf93cef58db5; expires=Thu, 17-Nov-2016 13:11:15
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220db22203b8fc6adce92e522cd342a1db%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404989%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7bb31c41689d5484c94f418e0dc385ed;
+      expires=Thu, 17-Nov-2016 19:49:49 GMT; path=/
+    - csrf_xmen=03f31f494b8e82a8289a67f78b071232; expires=Thu, 17-Nov-2016 19:49:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16680'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:11:15 GMT
+recorded_at: Thu, 17 Nov 2016 17:49:49 GMT
