--- a/www.parliament.gh/c529d797d142b9fd31ec4ed43377e1e6cf9cc51c.yml
+++ b/www.parliament.gh/c529d797d142b9fd31ec4ed43377e1e6cf9cc51c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:14:01 GMT
+    - Thu, 17 Nov 2016 17:50:07 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22768b0c4b01a4c6dd72d6be6e94832ac2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381241%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D382f9c9bfa769c839cede518dccfc723;
-      expires=Thu, 17-Nov-2016 13:14:01 GMT; path=/
-    - csrf_xmen=c0585e8701849a15558641d3a28d9b8b; expires=Thu, 17-Nov-2016 13:14:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2224b68418475c5a85a256b08befe3b375%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405007%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db04f6e9477270261eec6066ee6bf923e;
+      expires=Thu, 17-Nov-2016 19:50:07 GMT; path=/
+    - csrf_xmen=b919c2f9252e48e1839a2ac1723dfafb; expires=Thu, 17-Nov-2016 19:50:07
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16653'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:14:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:50:07 GMT
