--- a/www.parliament.gh/d42699fba267b01eebb1b4ec658063978fb81e4b.yml
+++ b/www.parliament.gh/d42699fba267b01eebb1b4ec658063978fb81e4b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:14:18 GMT
+    - Thu, 17 Nov 2016 17:50:25 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2234d2327abdd0fb9f20504abfd410fc9d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381258%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df89898aaa802ccfbf58c41e994a85688;
-      expires=Thu, 17-Nov-2016 13:14:18 GMT; path=/
-    - csrf_xmen=f3adb2751428301136881a27a851265f; expires=Thu, 17-Nov-2016 13:14:18
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2201f4e8d10dfbadf0ed9fc2f386644073%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405026%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Debba5f666bfd908d5f094fb116f09744;
+      expires=Thu, 17-Nov-2016 19:50:26 GMT; path=/
+    - csrf_xmen=92baed893edddc591646fe7af8cdc059; expires=Thu, 17-Nov-2016 19:50:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16387'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:14:18 GMT
+recorded_at: Thu, 17 Nov 2016 17:50:26 GMT
