200 OK http://www.parliament.gh/parliamentarians/282

--- a/www.parliament.gh/41db9ba32fd9605e7600a90d1cc4d9f10f015fbc.yml
+++ b/www.parliament.gh/41db9ba32fd9605e7600a90d1cc4d9f10f015fbc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:14:34 GMT
+    - Thu, 17 Nov 2016 17:50:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229d2f68414460c7fc06aeda95fc17068f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381274%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0a72d81e5e02867132a451227fdbae73;
-      expires=Thu, 17-Nov-2016 13:14:34 GMT; path=/
-    - csrf_xmen=55ae2721bb3f6f244a62bcdf0fdc786d; expires=Thu, 17-Nov-2016 13:14:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bb7f3c801cc0dd6bed39364271c965d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405056%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd535f43fdb395e5462576afc1ad70e78;
+      expires=Thu, 17-Nov-2016 19:50:56 GMT; path=/
+    - csrf_xmen=313e847c2c414dd6d7527c50bd83fcfb; expires=Thu, 17-Nov-2016 19:50:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16397'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:14:35 GMT
+recorded_at: Thu, 17 Nov 2016 17:50:56 GMT
