--- a/www.parliament.gh/da9d3a95c0aedae8f4fbfe05743faf2363200bff.yml
+++ b/www.parliament.gh/da9d3a95c0aedae8f4fbfe05743faf2363200bff.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:14:51 GMT
+    - Thu, 17 Nov 2016 17:51:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ab530b1e83b2c609e79d40d70ef2a5e7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381292%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df00a9393c496f4cc0e0957b8ed1ed366;
-      expires=Thu, 17-Nov-2016 13:14:52 GMT; path=/
-    - csrf_xmen=471db08e0ca88b5b0e0496c333a52156; expires=Thu, 17-Nov-2016 13:14:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e1b423b47477d7042d84d1f86233c26e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405078%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2e5bcf1691114dde4d351cae4fe26204;
+      expires=Thu, 17-Nov-2016 19:51:18 GMT; path=/
+    - csrf_xmen=0227901fdd141198fc5bddff40356349; expires=Thu, 17-Nov-2016 19:51:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16550'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:14:52 GMT
+recorded_at: Thu, 17 Nov 2016 17:51:19 GMT
