200 OK http://www.parliament.gh/parliamentarians/389

--- a/www.parliament.gh/f4272b3ed6eace0ea4f31a3a7bc36528473ca65d.yml
+++ b/www.parliament.gh/f4272b3ed6eace0ea4f31a3a7bc36528473ca65d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:15:09 GMT
+    - Thu, 17 Nov 2016 17:51:41 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b5b7f5a6a300fd5411798d7055c6d315%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381309%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc2ddc330ae73b04fd3259cd98a16a59a;
-      expires=Thu, 17-Nov-2016 13:15:09 GMT; path=/
-    - csrf_xmen=ab0d5848117ac843ebd6093dfe277362; expires=Thu, 17-Nov-2016 13:15:09
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a3c0a5fc9a53b1a00dc8d7ec967cbcdb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405101%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D69c0a68f53d08bcafddc8c5b17902733;
+      expires=Thu, 17-Nov-2016 19:51:41 GMT; path=/
+    - csrf_xmen=d6aa69d119f99ad21888af428b1ed539; expires=Thu, 17-Nov-2016 19:51:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16398'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:15:09 GMT
+recorded_at: Thu, 17 Nov 2016 17:51:41 GMT
