--- a/www.parliament.gh/87705af9702555f136d2e91d1a94130a7bb789cf.yml
+++ b/www.parliament.gh/87705af9702555f136d2e91d1a94130a7bb789cf.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:15:26 GMT
+    - Thu, 17 Nov 2016 17:51:59 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229af09c8039c809622134cc685e124e1d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381326%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcbf8deda782ff0650d6c8c635625ed16;
-      expires=Thu, 17-Nov-2016 13:15:26 GMT; path=/
-    - csrf_xmen=129693ac4b6d88fff3db12c097c50fd7; expires=Thu, 17-Nov-2016 13:15:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223b878fc5d3253eee3d07f80b534723e4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405119%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5f4a26d6680b02d80c9cef769c9e2a14;
+      expires=Thu, 17-Nov-2016 19:51:59 GMT; path=/
+    - csrf_xmen=a38a847ca62881653f964d73afc7e1aa; expires=Thu, 17-Nov-2016 19:51:59
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17103'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:15:26 GMT
+recorded_at: Thu, 17 Nov 2016 17:51:59 GMT
