--- a/www.parliament.gh/6044ca6d618d460de3630f5ae63980771292beae.yml
+++ b/www.parliament.gh/6044ca6d618d460de3630f5ae63980771292beae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:13:39 GMT
+    - Thu, 17 Nov 2016 17:52:38 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=57937076128e27fe13cb2fa67724ed42; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ee83ac09f4d5301a1cb4e1ec49c5fd79%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381219%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6855b10326befc40db5066024f76191a;
-      expires=Thu, 17-Nov-2016 13:13:39 GMT; path=/
-    - csrf_xmen=7d6d48c6604858057c632be98cda3b5a; expires=Thu, 17-Nov-2016 13:13:39
+    - PHPSESSID=c3bd07351530576f5ea18d8374228f5f; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ffc96837361e8d2547ec047e20d3c629%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405158%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7831aa723e7e25145b849001a6359957;
+      expires=Thu, 17-Nov-2016 19:52:38 GMT; path=/
+    - csrf_xmen=78d2e166ca8abc0553b3d7a02b6abc8f; expires=Thu, 17-Nov-2016 19:52:38
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78207'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:13:39 GMT
+recorded_at: Thu, 17 Nov 2016 17:52:39 GMT
