200 OK http://www.parliament.gh/parliamentarians/418

--- a/www.parliament.gh/0a8464f659169d9794a4a27aa0981f64ec7dcc6b.yml
+++ b/www.parliament.gh/0a8464f659169d9794a4a27aa0981f64ec7dcc6b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:15:44 GMT
+    - Thu, 17 Nov 2016 17:55:41 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224b05b47438dff4e12092c177b81a8a1b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381344%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df90d0d9abb73d674dfef0f8c0315f22a;
-      expires=Thu, 17-Nov-2016 13:15:44 GMT; path=/
-    - csrf_xmen=e24924d418ac3c7ad299b95a954104a6; expires=Thu, 17-Nov-2016 13:15:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221dd5f183e1c3d6f8f0ab20be46abf891%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405341%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9fb1455154fce7f97d598b5b3103b64f;
+      expires=Thu, 17-Nov-2016 19:55:41 GMT; path=/
+    - csrf_xmen=f475002f4a325840fbb3744b22ade1a3; expires=Thu, 17-Nov-2016 19:55:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16642'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:15:44 GMT
+recorded_at: Thu, 17 Nov 2016 17:55:41 GMT
