200 OK http://www.parliament.gh/parliamentarians/277

--- a/www.parliament.gh/6c46d66bb814767d3aea08137de3e934c5f36f63.yml
+++ b/www.parliament.gh/6c46d66bb814767d3aea08137de3e934c5f36f63.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:16:06 GMT
+    - Thu, 17 Nov 2016 17:56:00 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2239de4640b55739a1b59db966a5238692%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381366%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da78efa295b5312ff8dfc83507f941a0a;
-      expires=Thu, 17-Nov-2016 13:16:06 GMT; path=/
-    - csrf_xmen=bdc66ea173057816f9ca847e172fd68f; expires=Thu, 17-Nov-2016 13:16:06
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b0f89a3ff1c11dbf7936c27e61ebd716%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405360%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da33c806aa71cef90b355dae9b16750b9;
+      expires=Thu, 17-Nov-2016 19:56:00 GMT; path=/
+    - csrf_xmen=2e7e6a4a59342d89837783e6b450d707; expires=Thu, 17-Nov-2016 19:56:00
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16613'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:16:06 GMT
+recorded_at: Thu, 17 Nov 2016 17:56:01 GMT
