--- a/www.parliament.gh/1e2ac32e09ffbfeb97d3983d929cd7a78a259929.yml
+++ b/www.parliament.gh/1e2ac32e09ffbfeb97d3983d929cd7a78a259929.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:16:29 GMT
+    - Thu, 17 Nov 2016 17:56:33 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2216d9fd3c504551b4ec159aa15e8f2cbd%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381389%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Deace1c884bd704ac2e7cebfa353c02e6;
-      expires=Thu, 17-Nov-2016 13:16:29 GMT; path=/
-    - csrf_xmen=a4c988cc84fe1ee52ae419c9532f8478; expires=Thu, 17-Nov-2016 13:16:29
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2267474b74d7bc086ec91fd7e541ff6c94%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405393%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0574a2ce7a5ad2fdfad7b42fb7b1882f;
+      expires=Thu, 17-Nov-2016 19:56:33 GMT; path=/
+    - csrf_xmen=ded0512819dc42ace5da70a6563bf1d2; expires=Thu, 17-Nov-2016 19:56:33
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16457'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:16:29 GMT
+recorded_at: Thu, 17 Nov 2016 17:56:33 GMT
