200 OK http://www.parliament.gh/parliamentarians/296

--- a/www.parliament.gh/09a5d6eb20cda1709ba3fb4f3bd5349cfca707fa.yml
+++ b/www.parliament.gh/09a5d6eb20cda1709ba3fb4f3bd5349cfca707fa.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:16:51 GMT
+    - Thu, 17 Nov 2016 17:57:11 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2213df3c445c7a758d8dc10990759d6a60%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381411%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D43d793f7dbfc4001e36f4709c8417576;
-      expires=Thu, 17-Nov-2016 13:16:51 GMT; path=/
-    - csrf_xmen=fe70d5737f42b91ab1d77a987cbf6901; expires=Thu, 17-Nov-2016 13:16:51
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2266540b82898e4022ad9ccf8dcf7f1f5b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405431%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9a9fe5f4f3d307e22dfedc61b3bd31e5;
+      expires=Thu, 17-Nov-2016 19:57:11 GMT; path=/
+    - csrf_xmen=e3f28b825f9f45d7b0234fe7b2fee31f; expires=Thu, 17-Nov-2016 19:57:11
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16427'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:16:51 GMT
+recorded_at: Thu, 17 Nov 2016 17:57:11 GMT
