--- a/www.parliament.gh/5230380ece27fffd4fd65d429879fcd307244de5.yml
+++ b/www.parliament.gh/5230380ece27fffd4fd65d429879fcd307244de5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:17:14 GMT
+    - Thu, 17 Nov 2016 17:57:33 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2207325105180c5c127fb6941952520639%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381434%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6ba98b58757a15199c2413e387143a53;
-      expires=Thu, 17-Nov-2016 13:17:14 GMT; path=/
-    - csrf_xmen=896cb8f4c56278c5828272f9003ec102; expires=Thu, 17-Nov-2016 13:17:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ada1bf709be9182527d9c2a1bd6058de%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405455%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd3e3ced40292891d5ae7e10ca87742dd;
+      expires=Thu, 17-Nov-2016 19:57:35 GMT; path=/
+    - csrf_xmen=90dae74577fa602cf0ec30372ed98d23; expires=Thu, 17-Nov-2016 19:57:35
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16522'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:17:14 GMT
+recorded_at: Thu, 17 Nov 2016 17:57:35 GMT
