200 OK http://www.parliament.gh/parliamentarians/371

--- a/www.parliament.gh/0c5fd2e65404a03fff5418b035fc0ed67761dcad.yml
+++ b/www.parliament.gh/0c5fd2e65404a03fff5418b035fc0ed67761dcad.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:17:37 GMT
+    - Thu, 17 Nov 2016 17:58:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2294c91941fbebb044923fec18afe8aea2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381457%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6106fda52a64f28bcbb682ba1f5eb5f4;
-      expires=Thu, 17-Nov-2016 13:17:37 GMT; path=/
-    - csrf_xmen=6a6dde57bf1e52fa0187c85de0dfbb30; expires=Thu, 17-Nov-2016 13:17:37
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224f31a43535072bfbfa55d6e03c619400%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405492%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D28678fd8c7f685c6485c0cb289e6a65d;
+      expires=Thu, 17-Nov-2016 19:58:12 GMT; path=/
+    - csrf_xmen=66575e42bafe8ed38a6873edcd7ca19b; expires=Thu, 17-Nov-2016 19:58:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16640'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:17:37 GMT
+recorded_at: Thu, 17 Nov 2016 17:58:12 GMT
