--- a/www.parliament.gh/6133d8bf15f9d4e557723b41e5ef5714829d8f0b.yml
+++ b/www.parliament.gh/6133d8bf15f9d4e557723b41e5ef5714829d8f0b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:18:03 GMT
+    - Thu, 17 Nov 2016 17:58:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f8f3446e987681f88c7e7d7eaafab43d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381483%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D65791718b2c1774f04b1cc2e41d515bb;
-      expires=Thu, 17-Nov-2016 13:18:03 GMT; path=/
-    - csrf_xmen=29688ff1bf654c38c933ba5b410e1608; expires=Thu, 17-Nov-2016 13:18:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dc969fbfea365338b6bc497992f11b88%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405529%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0d88fea43e1a61bbbb6e220411b7d51d;
+      expires=Thu, 17-Nov-2016 19:58:49 GMT; path=/
+    - csrf_xmen=8ac8784c2ad0f167aeb729536c04e8fc; expires=Thu, 17-Nov-2016 19:58:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16610'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:18:03 GMT
+recorded_at: Thu, 17 Nov 2016 17:58:49 GMT
