200 OK http://www.parliament.gh/parliamentarians/379

--- a/www.parliament.gh/ec2dc7162e63d85b7385f90fdaf304be09eb1564.yml
+++ b/www.parliament.gh/ec2dc7162e63d85b7385f90fdaf304be09eb1564.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:18:19 GMT
+    - Thu, 17 Nov 2016 17:59:10 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cd7c5e78bc510e3d0696a2997543db8c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381499%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddf6359027ef3765ac6cbdf700323a814;
-      expires=Thu, 17-Nov-2016 13:18:19 GMT; path=/
-    - csrf_xmen=1cd657a285b2467e0f611d108c811ce4; expires=Thu, 17-Nov-2016 13:18:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229645f5eb407bde556d61228cf63fa578%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405550%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D708a920580369691a8fcf5be02fdd202;
+      expires=Thu, 17-Nov-2016 19:59:10 GMT; path=/
+    - csrf_xmen=7e9e68b9d43cdf4d453e4614079de304; expires=Thu, 17-Nov-2016 19:59:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16431'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:18:19 GMT
+recorded_at: Thu, 17 Nov 2016 17:59:10 GMT
