--- a/www.parliament.gh/838f4a7175ca350591a3584d41b09c1cc589757e.yml
+++ b/www.parliament.gh/838f4a7175ca350591a3584d41b09c1cc589757e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:18:43 GMT
+    - Thu, 17 Nov 2016 17:59:31 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2281de997b11ba5636ea05c2d972a8c0f2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381523%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da0772b580597f5f25a97ccf2d71de526;
-      expires=Thu, 17-Nov-2016 13:18:43 GMT; path=/
-    - csrf_xmen=be9fff0816ad70262251c15fd9396c4d; expires=Thu, 17-Nov-2016 13:18:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c74c17fe04edcda0867c687b65730b7b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405572%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7562ec867621f18c9e2dc9965f87ab12;
+      expires=Thu, 17-Nov-2016 19:59:32 GMT; path=/
+    - csrf_xmen=b0252d02095520b4c4b850981669c7b3; expires=Thu, 17-Nov-2016 19:59:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16641'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:18:43 GMT
+recorded_at: Thu, 17 Nov 2016 17:59:32 GMT
