--- a/www.parliament.gh/6efb3709f5200738bac8af94650863614004b804.yml
+++ b/www.parliament.gh/6efb3709f5200738bac8af94650863614004b804.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:18:59 GMT
+    - Thu, 17 Nov 2016 18:00:03 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22969081634f26a13c67d085db9c02779e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381539%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df3acd4f51c3b2f0a2ba64e1436c6692b;
-      expires=Thu, 17-Nov-2016 13:18:59 GMT; path=/
-    - csrf_xmen=be7a4b37401d63b45920c1d514efe854; expires=Thu, 17-Nov-2016 13:18:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f35adce713b5dab7eebad0d0bcf44879%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405603%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8291b77fcfc6bcdb95aa86ac5cc24367;
+      expires=Thu, 17-Nov-2016 20:00:03 GMT; path=/
+    - csrf_xmen=031d54490b48dcc23f88cc2c9dc11e87; expires=Thu, 17-Nov-2016 20:00:03
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16750'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:19:00 GMT
+recorded_at: Thu, 17 Nov 2016 18:00:03 GMT
