--- a/www.parliament.gh/b371c27eec2939786a4fb5f9d9f6be0cf12316d4.yml
+++ b/www.parliament.gh/b371c27eec2939786a4fb5f9d9f6be0cf12316d4.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:19:16 GMT
+    - Thu, 17 Nov 2016 18:00:26 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22885a9dd8bf9d6c7413c952b3c1f8bb1a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381556%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc5fe81be947c84fa84d8ed6de1a33d79;
-      expires=Thu, 17-Nov-2016 13:19:16 GMT; path=/
-    - csrf_xmen=e751e1635b455dacaf12f5e2681e5cc4; expires=Thu, 17-Nov-2016 13:19:16
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229f8386f7b8cdbb18a96592a4d48cbd7b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405626%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df952e931b8bfd6760aaf9be65bbdbacd;
+      expires=Thu, 17-Nov-2016 20:00:26 GMT; path=/
+    - csrf_xmen=c23802eb59109f113025aa3045a16dc4; expires=Thu, 17-Nov-2016 20:00:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16688'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:19:17 GMT
+recorded_at: Thu, 17 Nov 2016 18:00:27 GMT
