200 OK http://www.parliament.gh/parliamentarians/306

--- a/www.parliament.gh/5c051a60ced79a2bf75c93a550abff4ac54ff9b7.yml
+++ b/www.parliament.gh/5c051a60ced79a2bf75c93a550abff4ac54ff9b7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:19:41 GMT
+    - Thu, 17 Nov 2016 18:00:53 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2224f4bcfc649ce141167983f2dc8bd29d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381581%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6df4c6d17e3457423b1fc7ebfdc6576c;
-      expires=Thu, 17-Nov-2016 13:19:41 GMT; path=/
-    - csrf_xmen=ce881ef6cbcfecd0b98def8008d28f71; expires=Thu, 17-Nov-2016 13:19:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a0fef3379e6577d06f18006c01fbcce9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405653%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1906d158c1ead3b13139db2622b22ced;
+      expires=Thu, 17-Nov-2016 20:00:53 GMT; path=/
+    - csrf_xmen=dea816112e1e2051a024976021c21c75; expires=Thu, 17-Nov-2016 20:00:53
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16431'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:19:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:00:53 GMT
