200 OK http://www.parliament.gh/parliamentarians/192

--- a/www.parliament.gh/ce4d11fd2a7ba6a0da8f4e1aeb817f12b97a8011.yml
+++ b/www.parliament.gh/ce4d11fd2a7ba6a0da8f4e1aeb817f12b97a8011.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:19:58 GMT
+    - Thu, 17 Nov 2016 18:01:32 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2200b67c1e717ce43a33004426f5488687%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381598%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd0d1eaa4de6d684a8edb61cd8db96882;
-      expires=Thu, 17-Nov-2016 13:19:58 GMT; path=/
-    - csrf_xmen=33e6404e2f79f946abcc397782d2d78e; expires=Thu, 17-Nov-2016 13:19:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b59a2955f542e8d1ae99eafe52ca0fe5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405692%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0df2bbdfce14ca00714b3004f7b421d3;
+      expires=Thu, 17-Nov-2016 20:01:32 GMT; path=/
+    - csrf_xmen=5b47e8be4d491eec883993bf738a1802; expires=Thu, 17-Nov-2016 20:01:32
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17181'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:19:58 GMT
+recorded_at: Thu, 17 Nov 2016 18:01:32 GMT
