200 OK http://www.parliament.gh/parliamentarians/263

--- a/www.parliament.gh/e5514954ef7ad5cc1bcc86b865bb612c44473a8f.yml
+++ b/www.parliament.gh/e5514954ef7ad5cc1bcc86b865bb612c44473a8f.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:20:14 GMT
+    - Thu, 17 Nov 2016 18:02:08 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220ecebb09cea697568bae0f9760bf101a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381614%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6dc5a56606dd71656e53452e9ef05481;
-      expires=Thu, 17-Nov-2016 13:20:14 GMT; path=/
-    - csrf_xmen=bcc5c317b3ab36a8e724e518b5ae43c9; expires=Thu, 17-Nov-2016 13:20:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229243ba5ddb03b15253ca4d8f5edbe897%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405728%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D50a276473a0a7a6412c8ba0f6adcef2b;
+      expires=Thu, 17-Nov-2016 20:02:08 GMT; path=/
+    - csrf_xmen=a0930c45e9a8957dacb388cd6db684d7; expires=Thu, 17-Nov-2016 20:02:08
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16811'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:20:14 GMT
+recorded_at: Thu, 17 Nov 2016 18:02:08 GMT
