--- a/www.parliament.gh/0d78ea36afcb79dd9a4572353ab0b1a27de99b42.yml
+++ b/www.parliament.gh/0d78ea36afcb79dd9a4572353ab0b1a27de99b42.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:23:03 GMT
+    - Thu, 17 Nov 2016 18:02:25 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227ea6269b50189269da381266793a3be2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381783%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbb4af52390988bdb56276e922de3d6ca;
-      expires=Thu, 17-Nov-2016 13:23:03 GMT; path=/
-    - csrf_xmen=bd7df82705d735d6e3e145314911d047; expires=Thu, 17-Nov-2016 13:23:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ee75e7dd73fabeaa504a2bc01924ecf8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405745%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc5c07f7e0173a3799a97333fb08e1102;
+      expires=Thu, 17-Nov-2016 20:02:25 GMT; path=/
+    - csrf_xmen=b187f801dedccc0b1f9e9ff89cc356e7; expires=Thu, 17-Nov-2016 20:02:25
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16708'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:23:03 GMT
+recorded_at: Thu, 17 Nov 2016 18:02:26 GMT
