--- a/www.parliament.gh/4fe7c2528b2632f098f2d4520cb7ee2e63f62055.yml
+++ b/www.parliament.gh/4fe7c2528b2632f098f2d4520cb7ee2e63f62055.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:23:22 GMT
+    - Thu, 17 Nov 2016 18:02:53 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22048962e4e9e6eb7f5e9adddeb057a077%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381802%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1a37b123734ec923d4a127ab407b3069;
-      expires=Thu, 17-Nov-2016 13:23:22 GMT; path=/
-    - csrf_xmen=e0df7b7222da60f5940c5fd677a7859e; expires=Thu, 17-Nov-2016 13:23:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227e27a1062cb0fcd170d011c45acec12f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405773%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfc0041b7b8c62e3dd7b358025526a145;
+      expires=Thu, 17-Nov-2016 20:02:53 GMT; path=/
+    - csrf_xmen=ee756aed63148bb773185b57ebd8d68f; expires=Thu, 17-Nov-2016 20:02:53
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16580'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:23:22 GMT
+recorded_at: Thu, 17 Nov 2016 18:02:53 GMT
