--- a/www.parliament.gh/95f2ead29e4b38cbfea1b97be3a0c73931e0de47.yml
+++ b/www.parliament.gh/95f2ead29e4b38cbfea1b97be3a0c73931e0de47.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:23:41 GMT
+    - Thu, 17 Nov 2016 18:03:10 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2290f12e58993d3911a4bb0990195c0dc0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381821%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7bcfb958c58d911ad17e6de6d1f4a340;
-      expires=Thu, 17-Nov-2016 13:23:41 GMT; path=/
-    - csrf_xmen=8d5e78264bc9720f63bdbab84534f05f; expires=Thu, 17-Nov-2016 13:23:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220aa3965ca4df27dd53643e5df78b458c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405790%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db4918a18ca20f93fb3bbf3fcf7c08619;
+      expires=Thu, 17-Nov-2016 20:03:10 GMT; path=/
+    - csrf_xmen=bb32789accde3a2a39bc7aaf7d4e5837; expires=Thu, 17-Nov-2016 20:03:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16638'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:23:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:03:10 GMT
