--- a/www.parliament.gh/7b6a6ab1c63a3422b959c1d249e9966abe3bf99b.yml
+++ b/www.parliament.gh/7b6a6ab1c63a3422b959c1d249e9966abe3bf99b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:24:03 GMT
+    - Thu, 17 Nov 2016 18:03:41 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221692bcab26bf43efd321ddd2a9f5f867%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381843%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddce832a22baaae349d13c79dbdae98f1;
-      expires=Thu, 17-Nov-2016 13:24:03 GMT; path=/
-    - csrf_xmen=585a4baa7bece4fb8d6efcda49d9cf61; expires=Thu, 17-Nov-2016 13:24:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227de20543dab2d85016bcfc8839f64875%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479405821%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D798fcea0042a03be51d2ef83db67040c;
+      expires=Thu, 17-Nov-2016 20:03:41 GMT; path=/
+    - csrf_xmen=287bb54a7d634cab577cb0a5d721b3ae; expires=Thu, 17-Nov-2016 20:03:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17017'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:24:03 GMT
+recorded_at: Thu, 17 Nov 2016 18:03:41 GMT
