200 OK http://www.parliament.gh/parliamentarians/75

--- a/www.parliament.gh/5e85ad7469f9850237da1244df35d58db6682222.yml
+++ b/www.parliament.gh/5e85ad7469f9850237da1244df35d58db6682222.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:25:29 GMT
+    - Thu, 17 Nov 2016 18:08:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d8ac29e6bc0685cf00fd8cc9fb3e48d7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381929%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8a8a1febded064687671b30ee01c70e4;
-      expires=Thu, 17-Nov-2016 13:25:29 GMT; path=/
-    - csrf_xmen=98f558d67e6359d58ef23f059d86d518; expires=Thu, 17-Nov-2016 13:25:29
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220470a5c84859cfe687bb07e46b3e3eb5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406129%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1b3c594faa28461fac33d6ddf2044424;
+      expires=Thu, 17-Nov-2016 20:08:49 GMT; path=/
+    - csrf_xmen=cb8c3ca4febea52b2080d5a1e5d1f669; expires=Thu, 17-Nov-2016 20:08:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16491'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:25:29 GMT
+recorded_at: Thu, 17 Nov 2016 18:08:49 GMT
